[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sparkkit"
version = "0.1.0"
description = "A dplyr-inspired interface for PySpark"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["spark", "pyspark", "data", "dplyr"]
authors = [
    { name = "SparkKit Contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pyspark>=3.0.0",
    "pandas>=1.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]
dev = [
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/sparkkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=src/sparkkit --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
mypy_path = ["stubs"]

[tool.ruff]
line-length = 88
target-version = "py38"
